--- a/web/resources/css/jsfcrud.css
+++ b/web/resources/css/jsfcrud.css
@@ -93,5 +93,12 @@ tr.jsfcrud_even_row {
 .middleTextArea {
     font-size: 12px; 
     width: 500px;
-    height: 170px
+    height: 170px;
+
+    vertical-align: sub;
+}
+
+.smallBold {
+    font-size: 14px;
+    font-weight: bold;
 }
