--- a/web/resources/css/graystyle.css
+++ b/web/resources/css/graystyle.css
@@ -53,6 +53,9 @@
    border: 1px dotted #CEC0C0;
     text-align: left;
     vertical-align: text-top;
+    width: 100%;
+    max-width: 200px;
+    min-width: 130px;
 }
 
 .leftpanetext {
@@ -61,6 +64,7 @@
    font-weight: bold !important;
    padding-left: 10px;
    padding-right: 10px;
+   width: 100%;
 }
 
 .leftpanelink {
@@ -76,15 +80,16 @@
 .body {
     width: 100%;
     height: 100%;
-    text-align: left;
 }
 
 .contents {
    background-color: #E9E9D1;
    border: 1px dotted #CEC0C0;
    width: 100%;
+   height: 100%;
    vertical-align: top;
     text-align: left;
+    min-width: 800px;
 }
 
 /* footer */
@@ -725,4 +730,53 @@ table.qPrint td{
     border-top: 1px solid #E9E9D1;
     border-left: 1px solid #E9E9D1;
     border-right: 1px solid #E9E9D1;
+}
+
+
+
+tr.jsfcrud_odd_row {
+    background-color: #E9E9D1;
+    color: #4e6a71;
+}
+
+
+tr.jsfcrud_even_row {
+    background-color: #E9E9D1;
+    color: #4e6a71;
+}
+
+.middle {
+    font-size: 18px;
+}
+
+.middleBold {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.middleTextArea {
+    font-size: 12px; 
+    width: 500px;
+    height: 170px;
+    vertical-align: sub;
+}
+
+.smallBold {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.smallText {
+    font-size: 11px;
+}
+
+.smallTextField {
+    width: 30px;
+}
+
+.smallTextArea {
+    font-size: 12px; 
+    width: 300px;
+    height: 100px;
+    vertical-align: sub;
 }
