Mod: Indent link for admin pages

--- a/web/resources/css/graystyle.css
+++ b/web/resources/css/graystyle.css
@@ -67,6 +67,15 @@
    width: 100%;
 }
 
+.leftpanetextAdmin {
+   color: #FFFFFF !important;
+   font-size: 10px!important;
+   font-weight: bold !important;
+   padding-left: 23px;
+   padding-right: 10px;
+   width: 100%;
+}
+
 .leftpanelink {
    background-color: #666666;
 }
