Mod: Changed indent and character size of admin function text

--- a/web/resources/css/graystyle.css
+++ b/web/resources/css/graystyle.css
@@ -58,20 +58,20 @@
     min-width: 130px;
 }
 
-.leftpanetext {
+.leftpaneltext {
    color: #FFFFFF !important;
-   font-size: 10px!important;
+   font-size: 12px!important;
    font-weight: bold !important;
    padding-left: 10px;
    padding-right: 10px;
    width: 100%;
 }
 
-.leftpanetextAdmin {
+.leftpaneltextAdmin {
    color: #FFFFFF !important;
    font-size: 10px!important;
    font-weight: bold !important;
-   padding-left: 23px;
+   padding-left: 25px;
    padding-right: 10px;
    width: 100%;
 }
