--- a/web/resources/css/graystyle.css
+++ b/web/resources/css/graystyle.css
@@ -817,3 +817,23 @@ tr.jsfcrud_even_row {
     height: 100px;
     vertical-align: sub;
 }
+
+.navigationPane {
+    
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    border-right-style: none;
+    border-left-style: none;
+    border-bottom-style: none;
+    border-top-style: none;
+    border-right-width: 0px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    border-top-width: 0px;
+}
