--- a/web/resources/css/graystyle.css
+++ b/web/resources/css/graystyle.css
@@ -86,6 +86,15 @@
    width: 100%;
 }
 
+.leftpaneltextEncounter {
+   color: #FFFFFF !important;
+   font-size: 10px!important;
+   font-weight: bold !important;
+   padding-left: 25px;
+   padding-right: 10px;
+   width: 100%;
+}
+
 .leftpanelink {
    background-color: #666666;
 }
