--- a/web/resources/css/graystyle.css
+++ b/web/resources/css/graystyle.css
@@ -601,9 +601,10 @@ background-color: #eeeeee;
     font-weight: bold;
 }
 
+/* 印刷用ページのベースの設定 */
 .topLevelGridPrint{
     font-size: 9px;
-    color: #999999;
+    color: #333333;
     width:800px;
 
 }
@@ -660,6 +661,7 @@ table.gPrint td{
     padding-bottom: 2px;
     padding-left: 2px;
     padding-right: 2px;
+    color: #333333;
 }
 
 
@@ -854,4 +856,36 @@ tr.jsfcrud_even_row {
     border-left-width: 0px;
     border-bottom-width: 0px;
     border-top-width: 0px;
+}
+
+table.gPrintSummaryList{
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table.gPrintSummaryList th{
+
+    padding:4px;
+/*    border-bottom: 1px solid black; */
+/*    border-top: 1px solid black; */
+    text-align: center;
+}
+table.gPrintSummaryList td {
+    text-align:center;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    vertical-align:middle;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    color: #333333;
+}
+
+.topLevelGridPrint{
+    font-size: 9px;
+    color: #333333;
+
 }
