Mod: set style of arm page

--- a/web/resources/css/stylesheet.css
+++ b/web/resources/css/stylesheet.css
@@ -218,7 +218,7 @@ table.w td{
 /*    background-image:url(../resources/dndback01.jpg);*/
     background-color: #E9E9D1;
     font-size:12px;
-    text-align:center;
+    text-align:left;
     padding:2px;
     border-bottom: 1px solid #333333;
     border-top: 1px solid #333333;
